# fuji-iot

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: main.yml
controller/: BUILD  fuji_ac_controller.cc  fuji_ac_controller.h  fuji_ac_controller.proto  fuji_ac_controller_client.cc  fuji_ac_serial_interface.h  fuji_ac_serial_reader.cc  fuji_ac_serial_reader.h  fuji_ac_server.cc
debian/: README  changelog  control  fuji-ac.postinst  fuji-ac.service  install
etc/: fuji-ac.conf
hardware/: bom.html
hardware/DrillFiles/: drill_1_16.xln
hardware/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr  solderpaste_top.gbr
protocol/: BUILD  fuji_ac_protocol_handler.cc  fuji_ac_protocol_handler.h  fuji_ac_protocol_handler_test.cc  fuji_ac_state.cc  fuji_ac_state.h  fuji_frame.cc  fuji_frame.h  fuji_frame_test.cc  fuji_register.cc  fuji_register.h  fuji_register_test.cc  fuji_types.cc  fuji_types.h
sim/: BUILD  fuji_ac_unit_sim.cc  fuji_ac_unit_sim.h  fuji_ac_unit_sim_test.cc
tests/: BUILD  integration_test.cc
